--- a/index.html
+++ b/index.html
@@ -1,25 +1,26 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!doctype html>
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>
-        Naves
-    </title>
-    <link rel="Stylesheet" href="style.css">
+<meta charset="utf-8">
+<title>Resgate</title>
+<link href="css/estilos.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-    <div id="container">
-        <div id="fundoGame">
-            <div id="inicio" onclick="start()">
-                <h1> Resgate </h1>
-                <p>Utilize W para movimentar par cima, S para baixo e D para atirar</p>
-                <p>Iniciar!</p>
-            </div>
-        </div>
-    </div>
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="script.js"></script>
+<div id="container"> <!-- div container !-->
+
+	<div id="fundoGame"> <!-- div fundoGame !-->
+	
+		<div id="inicio" onclick="start()"><h1> Resgate do Soldado Adriano </h1> <!-- div inicio !-->
+		<p> Utilize a tecla CIMA para movimentar o helicóptero para cima, a tecla BAIXO para movimentar o helicoptero para baixo e a tecla D para atirar.</p>
+		<p> Clique aqui para iniciar!! </p>
+		</div> <!-- Fim da div inicio !-->
+		
+    </div> <!-- Fim da div fundoGame !-->
+	
+</div> <!-- Fim da div container !-->
+<script type="text/javascript" src="js/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="js/js.js"></script>
+<script type="text/javascript" src="js/jquery-collision.min.js"></script>
 </body>
 </html>
